[package]
name = "evm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
reth.workspace = true
reth-chainspec.workspace = true
reth-evm.workspace = true
reth-evm-ethereum.workspace = true
reth-node-api.workspace = true
reth-primitives.workspace = true
reth-node-ethereum.workspace = true
# seismic-inspector.workspace = true


[lints]
workspace = true
